@@ -45,7 +45,7 @@ static const int reg_offsets[NIOS2_NUM_REGS] =
   -1,  8,  9, 10, 11, 12, 13, 14,	/* r0 - r7 */
   0,  1,  2,  3,  4,  5,  6,  7,	/* r8 - r15 */
   23, 24, 25, 26, 27, 28, 29, 30,	/* r16 - r23 */
-  -1, -1, 19, 18, 17, 21, -1, 16,	/* et bt gp sp fp ea ba ra */
+  -1, -1, 19, 18, 17, 21, -1, 16,	/* et bt gp sp fp ea sstatus ra */
   21,					/* pc */
   -1, 20, -1, -1, -1, -1, -1, -1,	/* status estatus ...  */
   -1, -1, -1, -1, -1, -1, -1, -1
