@@ -164,7 +164,7 @@ static const char *const nios2_reg_names[NIOS2_NUM_REGS] =
   "zero", "at", "r2", "r3", "r4", "r5", "r6", "r7",
   "r8", "r9", "r10", "r11", "r12", "r13", "r14", "r15",
   "r16", "r17", "r18", "r19", "r20", "r21", "r22", "r23",
-  "et", "bt", "gp", "sp", "fp", "ea", "ba", "ra",
+  "et", "bt", "gp", "sp", "fp", "ea", "sstatus", "ra",
   "pc",
   "status", "estatus", "bstatus", "ienable",
   "ipending", "cpuid", "ctl6", "exception",
